[project]
name = "vulnscan-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "captum>=0.9.0",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lizard>=1.22.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "requests>=2.34.0",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
